# bash_kernel

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  bash_kernel.py  flit.ini  pyproject.toml  setup.py
bash_kernel/: __init__.py  __main__.py  display.py  images.py  install.py  kernel.py
bash_kernel/resources/: __init__.py
binder/: postBuild  requirements.txt
kernelspec/: kernel.json
